docs(changelog): populate 2.3.4 notes (Java 25 upgrade, OIDC self-check)
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>